--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -76,6 +76,12 @@
     <Compile Include="frmMain.designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPhieuDat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPhieuDat.designer.cs">
+      <DependentUpon>frmPhieuDat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\frmThanhToan.cs">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPhieuDat.resx">
+      <DependentUpon>frmPhieuDat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
